added primary functionality to the calculator, fixed some UI oversights. Need to work through bugs listed in javascript.js

--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
                     <button data-digit="3" class = "digitButton">3</button>
                 </div>
                 <div class = "buttonRow"> 
-                    <button data-operator="clear" class = "funcButton">Clear</button>
-                    <button data-operator="enter" class = "funcButton">Enter</button>
+                    <button data-digit="0" class = "digitButton">0</button>
+                    <button data-func="clear" class = "funcButton">Clear</button>
+                    <button data-func="enter" class = "funcButton">Enter</button>
                 </div>
             </div>
         </div>
