add backspace and decimal functionality - testing for robsustness next

--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
                     <button data-digit="3" class = "digitButton">3</button>
                 </div>
                 <div class = "buttonRow"> 
-                    <button data-digit="0" class = "digitButton">0</button>
+                    <button data-digit="0"        class = "digitButton">0</button>
+                    <button data-digit="."        class = "digitButton" style="font-weight: 600; font-size: x-large;">.</button>
+                    <button data-func="backspace" class = "funcButton">&#8592;</button>
+                </div>
+                <div class = "buttonRow"> 
                     <button data-func="clear" class = "funcButton">Clear</button>
                     <button data-func="enter" class = "funcButton">Enter</button>
                 </div>
